[DSTEW-POC] - Add interface for dataclaims provider